gcc/testsuite/rust/rustc/ui/issues/issue-61858.rs
fn main() {
    (if foobar) // { dg-error "" "" { target *-*-* } }
}

